--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -5,38 +5,37 @@
     <% if user.photo.key %>
       <%= cl_image_tag(user.photo.key, :width=>300, :height=>300, :gravity=>"faces", :crop=>"thumb", alt: "profile picture of #{user.username}", class: "avatar-large d-inline avatar-shadow") %>
     <% end %>
-    
+
     <span class="profile-shadow"><%= "#{user.username}'s profile" %></span>
   </h1>
 
   <div class="card border-0 rounded-4 p-4 shadow-sm mb-3 mt-4">
-    <h3>Your burgers</h3>
+    <h2>Your burgers</h2>
     <% if user.burgers.size >= 1 %>
-      <div class="row row-cols-1 row-cols-sm-2 row-cols-lg-3 row-cols-xl-4 g-3 mt-4">
-
+      <div class="row row-cols-1 row-cols-sm-2 row-cols-lg-3 row-cols-xl-4 g-3 mt-2">
         <% user.burgers.each do |burger| %>
+
           <div class="col">
             <div class="card h-100 rounded-3 border-0 shadow position-relative">
               <%= link_to cl_image_tag(burger.photos[0].key, :width=>300, :height=>300, :crop=>"thumb", alt: 'photo of the burger', class: 'card-img-top rounded-top'), burger_path(burger) %>
               <div class="rating-overlay">
-
                 <% if burger.reviews.count != 0 %>
                   <small class="bg-light rounded-circle p-3 px-2"><%= burger.average_rating %> <i class="fa-solid fa-star fa-2xs"></i></small>
                 <% else %>
                   <small class="bg-light rounded-circle p-3 px-1">New <i class="fa-solid fa-star fa-2xs"></i></small>
                 <% end %>
-
               </div>
               <div class="card-body">
                 <h5 class="card-title"><%= burger.name %></h5>
                 <p class="card-text fw-light align-bottom"><%= burger.description %></p>
               </div>
               <div class="card-footer d-flex justify-content-between border-0">
-                <%= link_to "Delete burger", burger_path(burger), data: {turbo_method: :delete, turbo_confirm: "Are you sure you want to delete '#{burger}'"}, class: 'text-danger' %>
+                <%= link_to "Delete", burger_path(burger), data: {turbo_method: :delete, turbo_confirm: "Are you sure you want to delete '#{burger}'"}, class: 'text-danger' %>
                 <p class="card-text pb-0">$$$</p>
               </div>
             </div>
           </div>
+
         <% end %>
       </div>
     <% else %>
@@ -45,87 +44,101 @@
   </div>
 
   <div class="card border-0 rounded-4 p-4 shadow-sm my-3">
-    <h3>Your bookings</h3>
-        <% if user.bookings.size >= 1 %>
-          <ul>
-            <% user.bookings.each do |booking| %>
-              <li>
-                <p>Booked burger: <%= booking.burger.name %></p>
-                <p>Start date: <%= booking.start_date %></p>
-                <p>End date: <%= booking.end_date %></p>
-              </li>
-            <% end %>
-          </ul>
+    <h2>Your bookings</h2>
+    <% if user.bookings.size >= 1 %>
+      <div class="row row-cols-sm-2 row-cols-lg-3 row-cols-xl-4 g-3 mt-2">
+        <% user.bookings.each do |booking| %>
 
-        <% else %>
-          <p>You don't have any bookings yet.</p></li>
+          <div class="col">
+            <div class="card h-100 border-0 rounded-3 shadow">
+              <div class="card-body">
+                <div class="card-title">
+                  <h4><span class="text-success"><i class="fa-regular fa-circle-check fa-sm"></i></span>  <%= booking.burger.name %></h4>
+                </div>
+                <div class="text-center mt-4">
+                  <p class="fs-6"><i class="fa-solid fa-calendar-days fa-xs"></i>  <%= booking.start_date %> to <%= booking.end_date %></p>
+                </div>
+              </div>
+            </div>
+          </div>
+
         <% end %>
-  </div>
-    <div class="card border-0 rounded-4 p-3 shadow-sm my-3">
-      <h3>Your reviews</h3>
-
-      <% if user.reviews.size >= 1 %>
-          <ul>
-            <% user.reviews.each do |review| %>
-              <li>
-                <p>Rating: <%= "#{review.rating} / 5" %></p>
-                <p>Content: <%= "#{review.content}" %></p>
-                <%= link_to "Delete",
-                    burger_review_path(review.burger, review),
-                    data: {turbo_method: :delete, turbo_confirm: "Really delete this review?"}%>
-
-              </li>
-            <% end %>
-          </ul>
-      <% else %>
-        <p>You don't have any reviews yet.</p>
-      <% end %>
-    </div>
-    <div class="card border-0 rounded-4 p-4 shadow-sm my-3">
-      <h3>Edit <%= resource_name.to_s.humanize %></h3>
-
-      <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-        <%= f.error_notification %>
-
-        <div class="form-inputs">
-          <%= f.input :username, required: true, autofocus: true %>
-          <%= f.input :email, required: true, autofocus: true %>
-
-          <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-            <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
-          <% end %>
-
-          <%= f.input :password,
-                      hint: "leave it blank if you don't want to change it",
-                      required: false,
-                      input_html: { autocomplete: "new-password" } %>
-          <%= f.input :password_confirmation,
-                      required: false,
-                      input_html: { autocomplete: "new-password" } %>
-          <%= f.input :current_password,
-                      hint: "we need your current password to confirm your changes",
-                      required: true,
-                      input_html: { autocomplete: "current-password" } %>
-
-          <%= f.input :photo,
-                        label: "Your profile picture",
-                        as: :file,
-                        required: false %>
-        </div>
-
-        <div class="form-actions">
-          <%= f.button :submit, "Update" %>
-        </div>
-      <% end %>
-    </div>
-    <div class="card rounded-4 p-4 shadow-sm bg-transparent my-3">
-      <h5>Cancel my account</h5>
-
-      <div>
-      <p>Unhappy with our services?</p>
-      <%= button_to "Cancel your account", registration_path(resource_name), data: { confirm: "Are you sure?", turbo_confirm: "Are you sure?" }, method: :delete, class: 'btn btn-sm btn-outline-danger' %>
       </div>
-    </div>
-    <%= link_to "Back", :back %>
+    <% else %>
+      <p>You don't have any bookings yet.</p></li>
+    <% end %>
+  </div>
 
+  <div class="card border-0 rounded-4 p-3 shadow-sm my-3">
+    <h2>Your reviews</h2>
+    <% if user.reviews.size >= 1 %>
+      <div class="row row-cols-sm-2 row-cols-lg-3 row-cols-xl-4 g-3 mt-2">
+        <% user.reviews.each do |review| %>
+          <div class="col">
+            <div class="card h-100 border-0 rounded-3 shadow">
+              <div class="card-body">
+                <div class="card-title">
+                  <h4><%= review.burger.name %></h4>
+                </div>
+                <div class="card-text">
+                  <p class="fs-5"><%= review.rating %> <span class="text-warning"><i class="fa-solid fa-star fa-xs"></i></span></p>
+                  <p class="fst-italic text-center">"<%= review.content %>"</p>
+                </div>
+              </div>
+              <div class="card-footer d-flex justify-content-between border-0">
+                <%= link_to "Delete",
+                  burger_review_path(review.burger, review),
+                  data: {turbo_method: :delete, turbo_confirm: "Really delete this review?"},
+                  class: "text-danger"%>
+              </div>
+            </div>
+          </div>
+        <% end %>
+      </div>
+    <% else %>
+      <p>You don't have any reviews yet.</p>
+    <% end %>
+  </div>
+
+  <div class="card border-0 rounded-4 p-4 shadow-sm my-3">
+    <h2>Edit <%= resource_name.to_s.humanize %></h2>
+
+    <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+      <%= f.error_notification %>
+
+      <div class="form-inputs">
+        <%= f.input :username, required: true, autofocus: true %>
+        <%= f.input :email, required: true, autofocus: true %>
+
+        <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+          <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
+        <% end %>
+
+        <%= f.input :password,
+                    hint: "leave it blank if you don't want to change it",
+                    required: false,
+                    input_html: { autocomplete: "new-password" } %>
+        <%= f.input :password_confirmation,
+                    required: false,
+                    input_html: { autocomplete: "new-password" } %>
+        <%= f.input :current_password,
+                    hint: "we need your current password to confirm your changes",
+                    required: true,
+                    input_html: { autocomplete: "current-password" } %>
+
+        <%= f.input :photo,
+                      label: "Your profile picture",
+                      as: :file,
+                      required: false %>
+      </div>
+      <div class="form-actions">
+        <%= f.button :submit, "Update" %>
+      </div>
+    <% end %>
+  </div>
+  <div class="card rounded-4 p-4 shadow-sm bg-transparent my-3">
+    <h5>Cancel my account</h5>
+    <p>Unhappy with our services?</p>
+    <%= button_to "Cancel your account", registration_path(resource_name), data: { confirm: "Are you sure?", turbo_confirm: "Are you sure?" }, method: :delete, class: 'btn btn-sm btn-outline-danger' %>
+  </div>
 </div>
