Erorr messages displyaing correctly

--- a/app/views/burgers/_booking.html.erb
+++ b/app/views/burgers/_booking.html.erb
@@ -4,9 +4,12 @@
       <div class="">
         <h2>Book now!</h2>
         <%= simple_form_for [@burger, @booking] do |f| %>
-          <%= f.input	 :start_date, as: :date, order: [:day, :month, :year]  %>
+          <%= f.input	 :start_date, as: :date, order: [:day, :month, :year] %>
           <%= f.input	 :end_date, as: :date, order: [:day, :month, :year] %>
           <%= f.submit "Submit booking", class: "button-book" %>
+
+          <%= @booking.errors[:minimum_one_day?] %>
+
         <% end %>
       </div>
     <% end %>
