added a search bar in the home page

--- a/app/views/burgers/index.html.erb
+++ b/app/views/burgers/index.html.erb
@@ -7,6 +7,7 @@
   <div class='index-title text-center py-5'>
     <h1>Burgs as far as the eye can see...</h1>
     <p>The choice is <strong>yours</strong>!</p>
+  <%= render "searchbar" %>
   </div>
   <div class="row row-cols-1 row-cols-sm-2 row-cols-lg-3 row-cols-xl-4 g-3 mb-5">
     <% @burgers.each do |burger| %>
