improved show page reviews layout

--- a/app/views/burgers/show.html.erb
+++ b/app/views/burgers/show.html.erb
@@ -28,20 +28,30 @@
 
     </div>
   </div>
-  <div class="row">
-    <div class="col card rounded-4 border-0 p-4 shadow-sm mt-3 me-0">
+  <div class="row g-3 mt-3">
+    <div class="col card rounded-4 border-0 p-4 shadow-sm mt-3">
       <div class="d-flex justify-content-between align-items-center">
         <h2>Reviews</h2>
         <% if @can_review %>
           <%= link_to "Review", new_burger_review_path(@burger), class: "btn btn-primary rounded-4 text-light fw-bold" %>
         <% end %>
       </div>
-      <% @burger.reviews.each do |review| %>
-        <div class="review-item">
-          <p class="review-item-rating"><%= review.rating %></p>
-          <p><%= review.content %></p>
-        </div>
-      <%= link_to "edit", edit_review_path(review), class: "btn btn-primary rounded-4 text-light fw-bold" %>
+      <% if @burger.reviews.count != 0 %>
+        <% @burger.reviews.each do |review| %>
+          <div class="review-item justify-content-between">
+            <div class="d-flex align-items-center">
+            <p class="review-item-rating"><%= review.rating %> <i class="fa-solid fa-star fa-2xs"></i></p>
+            <p class="fst-italic"><%= review.content %></p>
+            </div>
+            <div class="p-3">
+              <%= link_to edit_review_path(review) do %>
+                <p class="text-primary"><i class="fa-solid fa-pen"></i></p>
+              <% end %>
+            </div>
+          </div>
+        <% end %>
+      <% else %>
+        <p class="text-muted">No reviews yet</p>
       <% end %>
     </div>
   </div>
