--- a/app/assets/stylesheets/components/_show_page.scss
+++ b/app/assets/stylesheets/components/_show_page.scss
@@ -38,9 +38,10 @@
 .button-main {
   padding: 8px 12px;
   border-radius: 16px;
+  margin: 4px;
   background-color: rgb(112, 135, 247);
   font-weight: bold;
-  color: white;
+  color: white !important;
   text-decoration: none;
 }
 
@@ -48,3 +49,12 @@
   color: white;
   background-color: #516DF5;
 }
+
+.button-warning {
+  background-color: $orange !important;
+}
+
+.button-warning:hover {
+  background-color: #FF3B0A !important;
+}
+
