--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -33,7 +33,7 @@
 
                           <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
                               <%= link_to "Add a burger", new_burger_path, class: "dropdown-item" %>
-                              <%= link_to "Your profile", edit_user_registration_path, class: "dropdown-item" %>
+                              <%= link_to "Your profile", profile_path(current_user.username), class: "dropdown-item" %>
                               <%= link_to "Log out", destroy_user_session_path, data: {turbo_method: :delete}, class: "dropdown-item" %>
                           </div>
                       </li>
