User can delete pictures

--- a/app/views/burgers/edit.html.erb
+++ b/app/views/burgers/edit.html.erb
@@ -12,15 +12,31 @@
         <%= f.submit %>
       <% end %>
       <h4>Your attached pictures</h4>
-      <p>Currently you are only able to add pictures. You can't delete them (yet!)</p>
+      <% if @burger.photos.size <= 1 %>
+        <p>You can't delete this picture because you only have one picture.</p>
+      <% end %>
+
       <div class="d-block">
+        <% counter = 0 %>
         <% @burger.photos.each do |picture| %>
             <%= cl_image_tag(picture.key, class: "rounded", width: "200", height: "200", crop: "fill") %>
+
+            <%# Only show delete button if there is more than 1 picture %>
+            <% if @burger.photos.size > 1 %>
+              <%# If I click this, do an action and refresh the page %>
+              <%= form_with url: "/delete/picture", method: :post do |f| %>
+                <%= f.hidden_field :picture_index, value: counter %>
+                <%= f.hidden_field :burger_id, value: @burger.id %>
+                <%= f.submit "Delete this picture" %>
+              <% end %>
+            <% end %>
+            <%# <%= link_to "Delete", root_path, data: {test: "Here is a string"} %>
+            <% counter += 1 %>
         <% end %>
       </div>
     </div>
     <div class="col-sm-4 col-lg-8 d-flex align-content-center">
-      <%= image_tag "veggie_burg.png", width: "100%", style:"object-fit: cover", class: "rounded-4 hidable" %>
+      <%= cl_image_tag(@burger.photos.first.key, width: "100%", style: "object-fit: cover", class: "rounded-4 hidable") %>
     </div>
   </div>
   <%= link_to "Back to burger", :back %>
