--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -2,7 +2,8 @@
     <h1>New review</h1>
     <%= simple_form_for [@burger, @review] do |f| %>
       <%= f.input :content %>
-      <%= f.input :rating %>
+      <%= f.label :rating %>
+      <%= f.collection_select :rating, [[1, '⭐'], [2, '⭐⭐'], [3, '⭐⭐⭐'], [4, '⭐⭐⭐⭐'], [5, '⭐⭐⭐⭐⭐']], :first, :last %>
       <%= f.submit "Submit review", class: "btn btn-primary" %>
     <% end %>
 </div>
