--- a/app/views/burgers/index.html.erb
+++ b/app/views/burgers/index.html.erb
@@ -5,7 +5,7 @@
 
 <div class="container">
   <div class='index-title text-center py-5'>
-    <h1>Burgs as far as the eye can see...</h1>
+    <h1 style="color: #FFFFFF;">Burgs as far as the eye can see...</h1>
     <p>The choice is <strong>yours</strong>!</p>
   <%= render "searchbar" %>
   </div>
