--- a/app/views/reviews/edit.html.erb
+++ b/app/views/reviews/edit.html.erb
@@ -1,8 +1,10 @@
 <div class="container my-5">
+  <div class="card">
     <h1>Edit review</h1>
     <%= simple_form_for [@burger, @review] do |f| %>
       <%= f.input :content %>
       <%= f.input :rating %>
       <%= f.submit "Submit review", class: "btn btn-primary" %>
     <% end %>
+  </div>
 </div>
