--- a/app/views/reviews/edit.html.erb
+++ b/app/views/reviews/edit.html.erb
@@ -1,4 +1,5 @@
 <div class="container my-5">
+  <div class="card rounded-4 border-0 p-4 shadow-sm">
     <h1>Edit review</h1>
     <%= simple_form_for [@burger, @review] do |f| %>
       <%= f.input :content %>
@@ -6,4 +7,5 @@
       <%= f.collection_select :rating, [[1, '⭐'], [2, '⭐⭐'], [3, '⭐⭐⭐'], [4, '⭐⭐⭐⭐'], [5, '⭐⭐⭐⭐⭐']], :first, :last %>
       <%= f.submit "Submit review", class: "btn btn-primary" %>
     <% end %>
+  </div>
 </div>
