added star rating + installed a new library with yarn : star-rating.js

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,3 +10,6 @@
 // Your CSS partials
 @import "components/index";
 @import "pages/index";
+
+// Star rating
+@import "star-rating.js/dist/star-rating.css";
