--- a/app/views/burgers/show.html.erb
+++ b/app/views/burgers/show.html.erb
@@ -17,7 +17,7 @@
       </div>
 
       <%= render "burgers/booking" %>
-      
+
       <%# EDIT & DELETE LINKS, ONLY SHOW IF USER IS THE OWNER OF THE BURGER %>
 
       <% if current_user == @burger.user %>
@@ -81,3 +81,5 @@
 
   </div>
 </div>
+
+<script src="https://cdn.jsdelivr.net/npm/vanillajs-datepicker@1.3.1/dist/js/datepicker-full.min.js"></script>
