Fully functional seed working

--- a/app/views/bookings/confirmed.html.erb
+++ b/app/views/bookings/confirmed.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container pt-5" style="height: 80vh">
 
   <h1>Your booking is confirmed!</h1>
   <p>Here are your details:</p>
