--- a/app/views/burgers/_booking.html.erb
+++ b/app/views/burgers/_booking.html.erb
@@ -5,29 +5,12 @@
       <%= simple_form_for [@burger, @booking], data: { booking_modal_target: "form", action: "submit->booking-modal#send" } do |f| %>
         <%= f.input	 :start_date, as: :date, order: [:day, :month, :year] %>
         <%= f.input	 :end_date, as: :date, order: [:day, :month, :year] %>
-        <button type="submit" class="btn btn-info rounded-4 text-light fw-bold w-100" data-bs-toggle="modal" data-bs-target="#exampleModal">
+        <button type="submit" class="btn btn-info rounded-4 text-light fw-bold w-100">
           Submit booking
         </button>
-        <%# <% render 'burgers/booking_modal', burger: @burger, booking: @booking %> %>
-
-        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true" data-booking-modal-target="">
-          <div class="modal-dialog">
-            <div class="modal-content">
-              <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Booking successful!</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-              </div>
-              <div class="modal-body">
-                <h4>Dates</h4>
-                  <p><%= @booking.start_date %> to <%= @booking.end_date %></p>
-              </div>
-              <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary" data-bs-dismiss="modal" data-action="click->booking-modal#refresh">Save changes</button>
-              </div>
-            </div>
-          </div>
-        </div>
+        <% if params[:booking_id].present? %>
+          <%= render 'booking_modal' %>
+        <% end %>
       <% end %>
     </div>
   <% end %>
