--- a/app/views/burgers/_booking_modal.html.erb
+++ b/app/views/burgers/_booking_modal.html.erb
@@ -1,17 +1,24 @@
-<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true" data-booking-modal-target="">
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true" data-booking-modal-target="modal">
   <div class="modal-dialog">
-    <div class="modal-content">
+    <div class="modal-content rounded-4 border-0 shadow">
       <div class="modal-header">
         <h5 class="modal-title" id="exampleModalLabel">Booking successful!</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
-        <h4>Dates</h4>
-          <p><%= booking.start_date %> to <%= booking.end_date %></p>
+        <h4>Your booking details:</h4>
+          <div class="card bg-info bg-opacity-10 border-0 rounded-4 p-3 d-flex flex-row justify-content-between align-items-center">
+            <div>
+              <h5 class="text-info mt-2"><%= @new_booking.burger.name %></h5>
+              <p><%= @new_booking.start_date.day %>/<%= @new_booking.start_date.month %>/<%= @new_booking.start_date.year %> - <%= @new_booking.end_date.day %>/<%= @new_booking.end_date.month %>/<%= @new_booking.end_date.year %></p>
+            </div>
+            <div class="p-3">
+              <h6>$$$</h6>
+            </div>
+          </div>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary" data-bs-dismiss="modal" data-action="click->booking-modal#refresh">Save changes</button>
+        <button type="button" class="btn btn-info rounded-4 text-light fw-bold" data-bs-dismiss="modal"><i class="fa-solid fa-check fa-lg"></i></button>
       </div>
     </div>
   </div>
