--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -23,19 +23,10 @@
 
                 <%#  ACTIONS AS LOGGED IN USER %>
                 <% if current_user %>
+                        <%= link_to "Add a burger", new_burger_path, class: "btn btn-outline-info rounded-4 mx-1" %>
+                        <%= link_to "Your profile", profile_path(current_user.username), class: "btn btn-outline-info rounded-4 mx-1" %>
+                        <%= link_to "Log out", destroy_user_session_path, data: {turbo_method: :delete}, class: "btn btn-outline-info rounded-4 mx-1" %>
 
-                  <li class="nav-item dropdown">
-
-                    <div class="dropdown-toggle" id="navbarDropdown" data-bs-toggle="dropdown" aria-hashpopup="true" role="button">
-                      <i class="fa-solid fa-bars"></i>
-                      <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-                        <%= link_to "Add a burger", new_burger_path, class: "dropdown-item" %>
-                        <%= link_to "Your profile", profile_path(current_user.username), class: "dropdown-item" %>
-                        <%= link_to "Log out", destroy_user_session_path, data: {turbo_method: :delete}, class: "dropdown-item" %>
-                      </div>
-                    </div>
-
-                  </li>
                 <% end %>
                 <!--li class="nav-item"-->
                 <!--/li-->
