--- a/app/views/burgers/index.html.erb
+++ b/app/views/burgers/index.html.erb
@@ -34,7 +34,7 @@
             </div>
           <% end %>
           <div class="card-footer d-flex justify-content-end border-0 position-absolute bottom-0 w-100 mt-5">
-            <p class="card-text pb-0 ">€ <%= burger.price.truncate(2) %> per day</p>
+            <p class="card-text pb-0 ">$$$</p>
           </div>
         </div>
       </div>
