--- a/app/views/burgers/show.html.erb
+++ b/app/views/burgers/show.html.erb
@@ -13,6 +13,7 @@
     <div class="col card rounded-4 border-0 p-4 shadow-sm">
       <div class="show-page-main">
         <h1><%= @burger.name %></h1>
+        <h2>€ <%= @burger.price.truncate(2) %> <small class="fw-light">/ day</small></h2>
         <p><%= @burger.description %></p>
       </div>
 
@@ -45,7 +46,7 @@
       </div>
     </div>
   <% end %>
-  
+
   <div class="row">
     <div class="card rounded-4 border-0 p-4 shadow-sm mt-3">
       <div class="d-flex justify-content-between align-items-center">
