--- a/app/views/burgers/index.html.erb
+++ b/app/views/burgers/index.html.erb
@@ -5,7 +5,7 @@
 
 <div class="container">
   <div class='index-title text-center py-5'>
-    <h1 style="color: #FFFFFF;">Burgs as far as the eye can see...</h1>
+    <h1>Burgs as far as the eye can see...</h1>
     <p>The choice is <strong>yours</strong>!</p>
   <%= render "searchbar" %>
   </div>
@@ -34,7 +34,7 @@
             </div>
           <% end %>
           <div class="card-footer d-flex justify-content-end border-0 position-absolute bottom-0 w-100 mt-5">
-            <p class="card-text pb-0 "><strong>€ <%= burger.price.truncate(2) %></strong> / day</p>
+            <p class="card-text pb-0 ">€ <%= burger.price.truncate(2) %> per day</p>
           </div>
         </div>
       </div>
